refactor(intrinsics): unify narrow reverseBytes lowering
Signed-off-by: eapen <zhangyipeng7@huawei.com>